# rsm_front

./: .gitignore  Cargo.toml  README.md  blueprint.txt  install.sh  installer.sh
log/: logger-config.yaml
src/: api.rs  env_path.txt  error.rs  formatter.rs  main.rs  utils.rs
src/api/: api.rs  api_add.rs  api_auth.rs  api_clear.rs  api_list.rs  api_remove.rs  api_tables.rs  api_update.rs  mod.rs
src/parsers/: mod.rs
src/utils/: config_helper.rs  date_converter.rs  id_assigner.rs  mod.rs  table_formatter.rs
