[package]
name = "rsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_with = "3.7.0"
strum_macros = "0.26"

log = "0.4.21"
log4rs = "1.3.0"
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
cookie_store = "0.21.0"
reqwest_cookie_store = "0.7.0"
urlencoding = "2.1.3"
rpassword = "7.3.1"
terminal-spinners = "0.3.2"
lazy_static = "1.4.0"
dotenv = "0.15.0"
